manifests/manifests/external/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soft-backend-external
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: soft-backend-external
  template:
    metadata:
      labels:
        app: soft-backend-external
    spec:
      containers:
        - name: soft-backend-external
          image: ghcr.io/ueckoken/plarail2022-external:3eb3046-1668770474 # {"$imagepolicy": "plarail2021:external"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
