manifests/manifests/external/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: external
  namespace: plarail2021
spec:
  routes:
  - kind: Rule
    match: Host(`control.chofufes2022.ueckoken.club`)
    services:
    - name: soft-backend-external
      port: 80
  tls:
    secretName: cloudflare-cert
